se agrega información

--- a/Primera pagina/CV.css
+++ b/Primera pagina/CV.css
@@ -1,4 +1,3 @@
-.body 
-{
-    background: linear-gradient(to right, purple, red); 
+body {
+    background-image: linear-gradient(to right, purple, red); 
 }
